@@ -1757,6 +1757,7 @@
 17) kernel: net: af_unix: don't set err in unix_stream_read_generic unless there was an error.<br>
 18) kernel: net: af_unix: guard against other == sk in unix_dgram_sendmsg.<br>
 19) kernel: net: get_empty_filp()/alloc_file() leave both ->f_pos and ->f_version zero.<br>
+20) kernel: net: sock_close() couldn't have been called with NULL inode since at least 2.1.early.<br>
 <br>
 <br>
 <br>
